# qiyeocr

./: .dockerignore  .env  .env.example  Dockerfile  README.md  compose.yml  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
src/qiweiocr/: __init__.py  app.py  config.py  dependencies.py
src/qiweiocr/api/routes/: recipient.py
src/qiweiocr/core/: esb_route.py  esb_utils.py
src/qiweiocr/schemas/: recipient.py
src/qiweiocr/services/: cache.py  ftp_file.py  llm.py  recipient_extractor.py
tests/: test_recipient_api.py  test_recipient_extractor_service.py
