[project]
name = "qiweiocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zhaozhengtong", email = "1219673367@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "uvicorn>=0.42.0",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
